<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/id_titleApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:layout_marginBottom="53dp"
            android:text="@string/welcome"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/id_startButton"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/id_startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="188dp"
            android:layout_marginRight="188dp"
            android:layout_marginBottom="5dp"
            android:text="@string/random_quiz"
            app:layout_constraintBottom_toTopOf="@+id/id_categoryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/id_titleApp"
            app:layout_constraintTop_toBottomOf="@+id/id_titleApp" />

        <Button
            android:id="@+id/id_categoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/more_categories"
            app:layout_constraintBottom_toTopOf="@+id/id_world"
            app:layout_constraintEnd_toEndOf="@+id/id_startButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_startButton" />

        <Button
            android:id="@+id/id_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="168dp"
            android:text="@string/world_score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/id_categoryButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_categoryButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>